[build-system]
requires = ["hatchling < 1.22"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["portray"]

[project]
name = "tmp_fat_portray"
version = "1.8.0"
description = "Your Project with Great Documentation"
authors = [
  {name = "Timothy Crosley", email = "timothy.crosley@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "mkdocs >=1.6",
    "tmp_fat_pdocs >= v1.2.0",
    "toml >=0.10.0",
    "mkdocs-material >=7.0",
    "GitPython >=3.0",
    "pymdown-extensions >=7.0",
    "yaspin >=0.15.0,<3",
    "livereload >=2.6.3",
    "click >=8.1"
]

[project.optional-dependencies]
dev = [
    "bandit>=1.6",
    "pytest>=5.1",
    "safety>=1.8",
    "black>1.0.0",
    "mypy>0.730.0",
    "types-toml>0.0",
    "ipython>=7.7",
    "pytest-cov>=2.7",
    "pytest-mock>=1.10",
    "hypothesis-auto",
    "pprofile>=2.0",
    "ruff>=0.0.191",
    "cruft>=2.2",
]

[project.scripts]
portray = "portray.cli:cli"

[tool.portray.mkdocs.theme]
favicon = "art/logo_small.png"
logo = "art/logo_small.png"
name = "material"
palette = {primary = "blue grey", accent = "pink"}

[tool.ruff]
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.isort]
known-third-party = ["portray"]

[tool.black]
line-length = 100
